2010-08-31  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        new-run-webkit-tests: add more unit tests

        Add more unit tests for new-run-webkit-tests; we now cover all but
        the most obscure code paths in the generic code. We still need to
        add coverage for the http server and web socket paths, and add better
        coverage of the platform-specific logic. Note that the rebaselining
        tool is still not well tested.

        Also clean up some of the configuration logic for the printing
        module and the way it interacts with the Python logging module; that
        is a crufty interface, to be certain.
        
        https://bugs.webkit.org/show_bug.cgi?id=44902

        * Scripts/webkitpy/layout_tests/data/failures/expected/exception.html: Added.
        * Scripts/webkitpy/layout_tests/data/failures/expected/keyboard.html: Added.
        * Scripts/webkitpy/layout_tests/data/passes/error-expected.txt: Added.
        * Scripts/webkitpy/layout_tests/data/passes/error.html: Added.
        * Scripts/webkitpy/layout_tests/data/platform/test/test_expectations.txt:
        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
        * Scripts/webkitpy/layout_tests/layout_package/printing.py:
        * Scripts/webkitpy/layout_tests/layout_package/printing_unittest.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/test.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2010-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        * Scripts/check-for-global-initializers: Add a file that ends up having global initializers
        in a debug build when built with certain compilers.

2010-08-31  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Isolate all GTK+ typedefs into one file