@@ -312,6 +312,8 @@ public:
     // Speech input related functions.
     void setMockSpeechInputResult(const CppArgumentList&, CppVariant*);
 
+    void markerTextForListItem(const CppArgumentList&, CppVariant*);
+
 public:
     // The following methods are not exposed to JavaScript.
     void setWorkQueueFrozen(bool frozen) { m_workQueue.setFrozen(frozen); }
